<resources>
    <string name="app_name">Budget</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="trans_list">Transaction List</string>
    <string name="people">People List</string>
    <string name="spend_list">Spending List</string>
    <string name="cur_bud">Current Budget</string>
    <string name="about">About</string>
    <string name="about_text">Author: \t Daniil Polyakov</string>

    <string name="exit">Exit</string>
    <string name="sum">Insert sum</string>
    <string name="OK" translatable="false">OK</string>
    <string name="hint_name">Insert name (required)</string>
    <string name="hint_surname">Insert surname (required)</string>
    <string name="hint_last_name">Insert last name</string>
    <string name="hint_spent_Product">Insert product name</string>
    <string name="text_ok">Accept</string>
    <string name="text_back">Cancel</string>

    <string name="aboutStudent">About</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirmation</string>
    <string name="confirm_question">Are you sure you want to remove the selected person?</string>
    <string name="confirm_question_spent">Are you sure you want to remove the selected?</string>
    <string name="add_transaction">Add a payment</string>
    <string name="date">Date of the last payment:</string>
    <string name="sum_payments">Total:</string>
    <string name="rubles">rubles</string>

    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="hint_phone_1">Insert phone number (required)</string>
    <string name="hint_phone_2">Insert phone number </string>

    <string name="text_add">Add</string>
    <string name="text_call">Call</string>

    <string name="date_spent">Date:</string>
    <string name="sum_spent">Sum:</string>

    <string name="choose_date">Choose date</string>
    <string name="removing">Removing</string>
    <string name="removing_summary">Show the alert dialog before removing</string>

    <string name="titres"> Budget \u000A
                           2 трока титров \u000A
                           3 строка титров \u000A
                           4 строка титров</string>

    <string name="checkbox1_title">CheckBox 1</string>
    <string name="checkbox1_summary">Summary of CheckBox 1</string>
    <string name="list1_title">List 1</string>
    <string name="list1_summary">Summary of List 1</string>
    <string-array name="entries">
        <item>one</item>
        <item>two</item>
        <item>three</item>
    </string-array>
    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="chb1">Способ удаления</string>


</resources>
