<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:background="@drawable/ripple"
        android:text="@string/people"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spend_list"
        android:id="@+id/button3"
        android:background="@drawable/ripple"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_call_from_main"
        android:background="@drawable/ripple"
        android:text="@string/text_call"
        android:layout_marginTop="10dp"/>

</LinearLayout>