<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cur_bud"
        android:id="@+id/button4"
        android:background="@drawable/ripple"
        android:layout_marginBottom="10dp"
        android:textStyle="italic"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/button5"
        android:background="@drawable/ripple"
        android:layout_marginBottom="10dp"
        android:textStyle="italic"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/button6"
        android:background="@drawable/ripple"/>

</LinearLayout>