<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_2"
            android:inputType="phone" />

        <Button
            android:id="@+id/callButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="callClick"
            android:text="@string/text_call"
            android:background="@drawable/ripple"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="dialerAddClick"
            android:text="@string/text_add"
            android:background="@drawable/ripple"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="dialerBackClick"
            android:text="@string/text_back"
            android:background="@drawable/ripple"/>
    </LinearLayout>

</LinearLayout>